# hog2

./: .gitignore  CMakeLists.txt  compile.sh
abstraction/: MapAbstraction.cpp  MapAbstraction.h
abstractionalgorithms/: AStar.cpp  SearchAlgorithm.cpp
apps/stp/: Driver.cpp
apps/test/: Driver.cpp
cmake/: CMakeLists.txt
dynamic/: DynamicPDBSearch.h  PhOHeuristic.h
environments/: GraphEnvironment.cpp  GraphEnvironment.h  MNAgentPuzzle.cpp  MNAgentPuzzle.h  MNPuzzle.cpp  MNPuzzle.h  NaryTree.cpp  NaryTree.h  SequenceAlignment.h
experiments/: 2021-09-11-Hog2_15Puzzle.py  2021-10-01-Hog2_15Puzzle.py  2021-10-01-Hog2_15Puzzle_korf.py  2021-10-02-Hog2_15Puzzle-resolve.py  2021-10-03-Hog2_15Puzzle-filtered-korf.py  2021-10-03-Hog2_15Puzzle-filtered.py  2021-10-03-Hog2_15Puzzle-korf.py  2021-10-03-Hog2_15Puzzle.py  2021-10-04-Hog2_24Puzzle.py  2021-10-05-Hog2_15Puzzle-seven.py  parser-filtered.py  parser.py  requirements.txt
experiments/Docs/: Ablauf.txt  lab-info
generic/: IDAStar.h
lp/: lp_internals.cc  lp_internals.h  lp_solver.cc  lp_solver.h
search/: DynPermutationPDB.h  Heuristic.h  PDBHeuristic.h  PermutationPDB.h  SearchEnvironment.h
utils/: GLUtil.h
